[project]
name = "fund-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "Naira98",email = "nairamm99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
